syntax = "proto3";
option go_package = "netmap;netmap";
package netmap;

service NetMap {
    rpc GetState (Request) returns (Response);
    rpc SubscribeUpdates (stream Request) returns (stream Response);
}

message Request {
    string command = 1;
}

message Response {
    string json_data = 1; // Optimized network state update in JSON format
}